# myTinyRpc

./: CMakeLists.txt  README.md  rpc_test.lua
bushiyuanyoude/: maintest.cc  message.pb.cc  message.pb.h  test.cc
example/: user.proto
example/login/: CMakeLists.txt  client.cc  client1.cc  client2.cc  client_async.cc  client_asyncNewCallback.cc  client_circuit_break.cc  client_circuit_break前.cc  client_failover.cc  client_multi_thread.cc  server.cc  serverHttp.cc  serverLimit.cc  server_async前.cc
lib/include/: LoadBalancer.h  MprpcChannel.h  MprpcProvider.h  ServiceAddress.h  ZookeeperUtil.h
lib/include/fuse/: FuseProtector.h  FuseState.h
lib/include/limit/: BlockStrategy.h  FallBackMethod.cc  LimitProcess.h  LimitingRule.h  SampleEntity.h  SampleWindow.h  SlidingWindow.h
limit/: LimitAspect.h  LimitProcess.cc  README.md  RateLimit.h  SampleEntity.cc  SampleEntity.h  SampleWindow.cc  SlidingWindow.cc
limit/test/: LimitAspect草.java  MyClass.java  ReflectionExample.java  test.cc  简化版本.cc
protobuf_test/: test.cc
src/: CMakeLists.txt  Channel.cc  ConsistentHashLoadBalancer.cc  FuseProtector.cc  MprpcApplication.cc  MprpcChannel.cc  MprpcChannel3_27.cc  MprpcChannel_select.cc  MprpcProvider.cc  MprpcProvider1.cc  RoundRobinLoadBalancer.cc  ZookeeperUtil.cc  ZookeeperUtil3_16.cc  test.txt
src/include/: LoadBalancer.h  MprpcApplication.h  MprpcChannel.h  MprpcController.h  MprpcProvider.h
src/include/fuse/: FuseProtector.h  FuseState.h
src/include/limit/: LimitProcess.h  LimitingRule.h  SampleWindow.h  SlidingWindow.h
src/limit/: LimitProcess.cc  SampleEntity.cc  SampleWindow.cc  SlidingWindow.cc
test/: test
项目讲解/: Cproxy.cc  README.md  RpcClientProxy.java  RpcInvokerProxy.java  rpc_test_protobuf.lua  ~  随机负载均衡.cc
项目讲解/brpc/: circuit_breaker.cpp  circuit_breaker.h
项目讲解/brpc/asynchronous_echo_c++/: server.cpp
项目讲解/brpc_note/asynchronous_echo_c++/: client.cpp
项目讲解/easy_rpc/: ConsumerHandler.java  ConsumerProxy.java  ConsumerServiceImpl.java  RpcConfigProperties.java  RpcPipeline.java
项目讲解/easy_rpc/filter/: RequestFilterHandler.java  ResponseFilterHandler.java
项目讲解/easy_rpc/fuse/: FuseHandler.java  FuseProtector.java  FuseState.java  ServiceState.java
项目讲解/easy_rpc/limit滑动窗口限流/: LimitProcess.java
项目讲解/easy_rpc/limit滑动窗口限流/aspect_限流降级切面/: LimitAspect.java
项目讲解/easy_rpc/limit滑动窗口限流/config_配置参数/: LimitConfig.java  UnifiedLimitConfig.java
项目讲解/easy_rpc/limit滑动窗口限流/entity_和RateLimit/: LimitingRule.java
项目讲解/easy_rpc/limit滑动窗口限流/limitAnnotation_限流注解/: RateLimit.java
项目讲解/easy_rpc/limit滑动窗口限流/limitStrategy_主要部分/: LimitStrategy.java
项目讲解/easy_rpc/limit滑动窗口限流/limitStrategy_主要部分/slidingWindowStrategy/: SampleEntity.java  SlidingWindow.java
项目讲解/xhyrpc/common/: RpcRequest.java  RpcResponse.java
项目讲解/xhyrpc/protocol/serialization/: JsonSerialization.java
项目讲解/xhyrpc/provider/: ProviderPostProcessor.java
项目讲解/xhyrpc/registry/: RedisRegistry.java  ZookeeperRegistry.java
项目讲解/xhyrpc/router/: ConsistentHashLoadBalancer.java  RoundRobinLoadBalancer.java
项目讲解/xhyrpc/router/其他/registry/: RegistryFactory.java  RegistryService.java
项目讲解/xhystudy/rpc/Filter/: FilterData.java
项目讲解/xhystudy/rpc/consumer/: ConsumerPostProcessor.java  RpcConsumer.java  RpcInvokerProxy.java
项目讲解/xhystudy/rpc/poll/: ThreadPollFactory.java
项目讲解/xhystudy/rpc/protocol/: RpcProtocol.java
项目讲解/xhystudy/rpc/protocol/codec/: RpcDecoder.java
项目讲解/xhystudy/rpc/router/: RoundRobinLoadBalancer.java  ServiceMetaRes.java
项目讲解/xhystudy/rpc/router/其他/: ServiceMeta.java
项目讲解/xhystudy/rpc/router/其他/registry/: ZookeeperRegistry.java
