set(CLIENT_LIST client.cc ../user.pb.cc)
set(CLIENT1_LIST client1.cc ../user.pb.cc)
set(CLIENT2_LIST client2.cc ../user.pb.cc)
set(CLIENT3_LIST client3.cc ../user.pb.cc)
set(CLIENT_MULTI_LIST client_multi_thread.cc ../user.pb.cc)
set(SERVER_LIST server.cc ../user.pb.cc)

add_executable(client ${CLIENT_LIST})
add_executable(client1 ${CLIENT1_LIST})
add_executable(client2 ${CLIENT2_LIST})
add_executable(client3 ${CLIENT3_LIST})
add_executable(client_multi_thread ${CLIENT_MULTI_LIST})
add_executable(server ${SERVER_LIST})

target_link_libraries(client PRIVATE mprpc protobuf)
target_link_libraries(client PRIVATE "-L/usr/local/lib/ -lprotobuf")
target_link_libraries(client1 PRIVATE mprpc protobuf)
target_link_libraries(client1 PRIVATE "-L/usr/local/lib/ -lprotobuf")
target_link_libraries(client2 PRIVATE mprpc protobuf)
target_link_libraries(client2 PRIVATE "-L/usr/local/lib/ -lprotobuf")
target_link_libraries(client3 PRIVATE mprpc protobuf)
target_link_libraries(client3 PRIVATE "-L/usr/local/lib/ -lprotobuf")
target_link_libraries(client_multi_thread PRIVATE mprpc protobuf)
target_link_libraries(client_multi_thread PRIVATE "-L/usr/local/lib/ -lprotobuf")
target_link_libraries(server PRIVATE mprpc protobuf)
target_link_libraries(server PRIVATE "-L/usr/local/lib/ -lprotobuf")